Switched selects for dropdown component in cat views

--- a/app/javascript/bundles/UI/components/Dropdown/Dropdown.scss
+++ b/app/javascript/bundles/UI/components/Dropdown/Dropdown.scss
@@ -1,8 +1,5 @@
 .dropdown {
     position: relative;
-    padding: 0.3rem 0.7rem;
-    padding-bottom: 0.2rem;
-    padding-top: 0.2rem;
     margin-bottom: 0.01rem !important;
 }
 
@@ -13,18 +10,16 @@
     display: flex;
     justify-content: space-between;
     padding: 1em;
-    border: 2px solid rgb(212, 210, 210);
+    border: 2px solid var(--shadow);
     border-radius: 15px;
-    color: rgb(0, 7, 105);
     margin-bottom: 0.3em !important;
 }
 
 .dropdown-list {
     position: relative;
     padding: 1em;
-    border: 2px solid rgb(212, 210, 210);
+    border: 2px solid var(--shadow);
     border-radius: 15px;
-    color: rgb(0, 7, 105) !important;
     margin-bottom: 0.01rem !important;
 
     li {
