--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -193,6 +193,11 @@ section {
 	width: 25%;
 }
 
+.landing-illustration-micro {
+	width: 15%;
+}
+
+
 .left-margin { /* HOJAS */
 	pointer-events: none;
   position: fixed; /* paralax */
