--- a/app/views/layouts/league.html.erb
+++ b/app/views/layouts/league.html.erb
@@ -5,6 +5,8 @@
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+    <%= stylesheet_pack_tag 'ui-bundle', media: 'all' %>
+    <%= javascript_pack_tag 'ui-bundle' %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
