--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<section id="intro-video">
+<section id="intro-video" class="eter-section">
   <div class="container video-container">
     <img class="full-width" src="/covi_construccion.svg" />
   </div>
