--- a/app/views/pages/learn.html.erb
+++ b/app/views/pages/learn.html.erb
@@ -1,9 +1,11 @@
-<section class="container center">
-  <h1 class="orange humungous-title">¡Colonia a la vista!</h1>
-  <div class="card-pic center center-block">
-    <img src="explorar.gif" class="landing-illustration-mini animated" />
-    <img src="explorar.png" class="landing-illustration-mini static-white" />
-    <img src="explorar.png" class="landing-illustration invisible" />
+<section class="center" style="background: white">
+  <div class="container">
+    <h1 class="orange humungous-title">¡Colonia a la vista!</h1>
+    <div class="card-pic center center-block" style="padding-bottom: 10em">
+      <img src="explorar.gif" class="landing-illustration-micro animated" />
+      <img src="explorar.png" class="landing-illustration-micro static-white" />
+      <img src="explorar.png" class="landing-illustration-micro invisible" />
+    </div>
   </div>
 </section>
 
