--- a/app/views/colonies/show.html.erb
+++ b/app/views/colonies/show.html.erb
@@ -5,21 +5,37 @@
   <%= @colony.bio %>
 </p>
 <br />
-<div class='d-flex'>
-  <div class='p-2'>Tasks</div>
-  <div class='p-2'><%=react_component('Tag', props: {type: 'error', children: '1' })%></div>
-  <div class='ml-auto p-2'><%=react_component('Button', props: {type: 'success', value: 'New task', target: new_task_path })%></div>
-</div>
-<% @colony.tasks.each do | task | %>
-<%= react_component("Card", props: {title: task.name, body: task.description, link: task_path(task), footer: "assigned to"}, class:'card', prerender: false) %>
-<% end %>
-<div class='d-flex'>
-  <div class='p-2'>Cats</div>
-  <div class='p-2'><%=react_component('Tag', props: {type: 'error', children: '1' })%></div>
-  <div class='ml-auto p-2'><%=react_component('Button', props: {type: 'success', value: "New cat", target: new_cat_path })%></div>
-</div>
-<div class="card-columns">
-  <% @colony.cats.each do |cat| %>
-  <%= react_component('Card', props: {title: cat.name, link: cat_path(cat), image: avatar_tag(cat), footer: 'Manage'}, class:'card', prerender: false) %>
+
+<% if @colony.tasks.count > 0 %>
+  <div class='d-flex'>
+    <div class='p-2'>Tasks</div>
+    <div class='p-2'><%=react_component('Tag', props: {type: 'error', children: @colony.tasks.count })%></div>
+    <div class='ml-auto p-2'><%=react_component('Button', props: {type: 'success', value: 'New task', target: new_task_path })%></div>
+  </div>
+  <% @colony.tasks.each do | task | %>
+    <%= react_component("Card", props: {title: task.name, body: task.description, link: task_path(task), footer: "assigned to"}, class:'card', prerender: false) %>
   <% end %>
-</div>
+<% end %>
+
+<% if @applications.count > 0 %>
+  <div class='d-flex'>
+    <div class='p-2'>Applications</div>
+    <div class='p-2'><%=react_component('Tag', props: {type: 'error', children: @applications.count })%></div>
+  </div>
+  <% @applications.each do | app | %>
+  <%= react_component("Card", props: {title: app.user.email, body: app.message, link: approve_colony_application_path(app), footer: "Approve"}, class:'card', prerender: false) %>
+  <% end %>
+<% end %>
+
+<% if @colony.cats.count > 0 %>
+  <div class='d-flex'>
+    <div class='p-2'>Cats</div>
+    <div class='p-2'><%=react_component('Tag', props: {type: 'error', children: @colony.cats.count })%></div>
+    <div class='ml-auto p-2'><%=react_component('Button', props: {type: 'success', value: "New cat", target: new_cat_path })%></div>
+  </div>
+  <div class="card-columns">
+    <% @colony.cats.each do |cat| %>
+    <%= react_component('Card', props: {title: cat.name, link: cat_path(cat), image: avatar_tag(cat), footer: 'Manage'}, class:'card', prerender: false) %>
+    <% end %>
+  </div>
+<% end %>
