--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Los miembros de la colonia</h1>
+<h1><%= t 'cats.index_title' %></h1>
 <div class="d-flex justify-content-between mb-4">
   <p><%= t 'cats.index_intro' %></p>
   <!--%= react_component("Button", props: {type: 'success', value: t('cats.new'), target: new_cat_path}, prerender: false) %-->
