--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -1,3 +1,11 @@
+/*
+ * This is a manifest file that'll be compiled into registrations.css, which will include all the files
+ * listed below.
+ *
+ *= require colors
+ *= require_self
+ */
+
 @import "bootstrap";
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,700|Zilla+Slab:400,600i,700');
 @import url("colors");
