--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -13,7 +13,7 @@
         <% if !(@cat.abandoned_date.nil?) %>
             <%= t('cats.abandoned_label') %> <%= time_ago_in_words @cat.abandoned_date %></br>
         <% end %>
-        <%= @cat.gender %>
+        <%= enum_l(@cat, :gender) %>
     </div>
 </div>
 <p><%= @cat.bio %></p>
@@ -21,7 +21,7 @@
 <h2>Health</h2>
   <% if @cat.sufferings.count > 0 %>
     <% @cat.sufferings.each do |condition| %>
-        <%= react_component("Card", props: {title: condition.illness.name, body: t('cats.diagnosed_label') + condition.diagnosis_date.to_s, footerLink: suffering_path(condition), footer: 'Review'}, class:'card', prerender: false) %>
+        <%= react_component("Card", props: {title: condition.illness.name, body: t('cats.diagnosed_label') + condition.diagnosis_date.to_s, footerLink: suffering_path(condition), footer: t('shared.review')}, class:'card', prerender: false) %>
     <% end %>
   <% else %>
     <p><%= t('cats.no_sufferings', cat: @cat.name) %></p>
