--- a/app/views/colonies/show.html.erb
+++ b/app/views/colonies/show.html.erb
@@ -10,10 +10,10 @@
 <div class='d-flex'>
   <div class='p-2'><%= t('tasks.title') %></div>
   <div class='p-2'><%=react_component('Tag', props: {type: 'error', children: @colony.tasks.count })%></div>
-  <div class='ml-auto p-2'><%=react_component('Button', props: {type: 'success', value: 'New task', target: new_task_path })%></div>
+  <div class='ml-auto p-2'><%=react_component('Button', props: {type: 'success', value: t('tasks.new'), target: new_task_path })%></div>
 </div>
   <% @colony.tasks.each do | task | %>
-    <%= react_component("Card", props: {title: task.name, body: task.description, link: task_path(task), footer: "assigned to"}, class:'card', prerender: false) %>
+    <%= react_component("Card", props: {title: task.name, body: task.description, link: task_path(task), footer: t('tasks.assigned_to', user: current_user.username)}, class:'card', prerender: false) %>
   <% end %>
 <% end %>
 
@@ -23,7 +23,7 @@
   <div class='p-2'><%=react_component('Tag', props: {type: 'error', children: @applications.count })%></div>
 </div>
   <% @applications.each do | app | %>
-  <%= react_component("Card", props: {title: app.user.email, body: app.message, link: approve_colony_application_path(app), footer: "Approve"}, class:'card', prerender: false) %>
+  <%= react_component("Card", props: {title: app.user.email, body: app.message, link: approve_colony_application_path(app), footer: t('applications.approve')}, class:'card', prerender: false) %>
   <% end %>
 <% end %>
 
@@ -31,12 +31,12 @@
 <div class='d-flex'>
   <div class='p-2'><%= t('cats.title') %></div>
   <div class='p-2'><%=react_component('Tag', props: {type: 'error', children: @colony.cats.count })%></div>
-  <div class='ml-auto p-2'><%=react_component('Button', props: {type: 'success', value: "New cat", target: new_cat_path(colony_id: @colony.id) })%></div>
+  <div class='ml-auto p-2'><%=react_component('Button', props: {type: 'success', value: t('cats.new'), target: new_cat_path(colony_id: @colony.id) })%></div>
 </div>
 <% if @cats.count > 0 %>
   <div class="card-columns">
     <% @cats.each do |cat| %>
-    <%= react_component('Card', props: {title: cat.name, link: cat_path(cat), image: avatar_tag(cat), footer: 'Manage'}, class:'card', prerender: false) %>
+    <%= react_component('Card', props: {title: cat.name, link: cat_path(cat), image: avatar_tag(cat), footer: t('shared.manage')}, class:'card', prerender: false) %>
     <% end %>
   </div>
 <% end %>
