--- a/app/views/colony_application_mailer/notify_approval.html.erb
+++ b/app/views/colony_application_mailer/notify_approval.html.erb
@@ -1,7 +1,7 @@
-<h1>You have successfully joined <%= @colony.name %> colony</h1>
+<h1><%= t('mailers.colony_application.approval.title', colony: @colony.name) %></h1>
 
-<p>Click on the following link to visit the colony dashboard:</p>
+<p><%= t('mailers.colony_application.approval.body') %></p>
 
 <%= link_to colony_url(@colony) do %>
-   Go!
+  <%= t('shared.go') %>
 <% end %>
