--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -21,8 +21,8 @@ sterilized: <%= @cat.sterilized %></br>
     <%= link_to "Adopt", adopt_cat_path(id: @cat.id) %></br>
 <% end %>
 
-<% if policy(@cat).sponsor? %>
-    <%= link_to "Sponsor", new_sponsor_cat_path(id: @cat.id) %></br>
+<% if policy(@cat).sponsorship? %>
+    <%= link_to "Sponsorship", new_sponsorship_cat_path(id: @cat.id) %></br>
 <% end %>
 
 <% if policy(@cat).edit? %>
